<resources>
    <string name="app_name">天府•安逸</string>
    <string name="plx_input_email">帐号</string>
    <string name="plx_input_password">密码</string>
    <string name="plx_input_phone_number">请输入手机号码</string>
    <string name="plx_input_sms_password">请输入验证码</string>
    <string name="request_sms_password">获取验证码</string>
    <string name="wait_for_next_sms_password_request">%d秒后重新获取</string>
    <string name="login">登录</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="complete">完成</string>
    <string name="alert">提示</string>
    <string name="system_tip">系统提示</string>
    <string name="warning_logout">退出后无法接收离线通知，要退出吗？</string>
    <string name="http_error">连接异常,稍后重试</string>
    <string name="server_error">请求暂时无法处理，请稍后重试</string>
    <string name="init_error_no_sdcard">检测到存储卡不可用</string>
    <string name="download_error_no_sdcard">未插入SD卡，无法下载更新</string>
    <string name="master_clear_alert">擦除数据，强制退出</string>
    <string name="sms_login_wrong_cell">请输入正确手机号码</string>
    
    <string name="login_get_autocode">正在获取验证码</string>
    <string name="login_loading">正在登录</string>
    <string name="login_forget_password">忘记密码？</string>
    <string name="loading">登录中...</string>
    
    <string name="tab_chat">安逸</string>
    <string name="tab_schedule">打卡</string>
    <string name="tab_contacts">通讯录</string>
    <string name="tab_appcenter">我的应用</string>
    <string name="tab_circle">工作圈</string>
    
    <string name="sliding_inner_network">我的社区</string>
    <string name="sliding_outer_network">我的外部社区</string>
    <string name="sliding_check_outer_network">浏览外部社区</string>
    <string name="sliding_user_feedback">用户反馈</string>
    
    <string name="title_setting">设置</string>
    <string name="setting_message_disturb">消息免打扰设置</string>
	<string name="setting_message_notification">新消息提醒</string>
	<string name="setting_gesture_password">手势密码</string>
	<string name="setting_change_password">修改密码</string>
	<string name="setting_function_introdution">功能介绍</string>
	<string name="setting_call_remind">来电显示</string>
	<string name="version_upgrade">版本信息(%s)</string>
	<string name="setting_logout">退出登录</string>
	<string name="welcome_main_start">开始使用</string>
	
	<string name="diagosis_title">自动诊断</string>
	<string name="diagosis_btn">一键诊断</string>
	<string name="diagosis_http_server">httpserver地址：</string>
	<string name="diagosis_push_server">推送server地址：</string>
	<string name="diagosis_http_server_alert">尝试连接httpserver</string>
	<string name="diagosis_push_server_alert">尝试连接推送server</string>
	<string name="diagosis_server_check_success">成功！</string>
	<string name="diagosis_server_check_fail">失败！</string>
	<string name="diagosis_cellphone_error_network">手机无法连接网络，请检查手机设置</string>
	<string name="diagosis_error_server">服务器内部错误，请检查服务器日志</string>
	<string name="diagosis_error_server_404">服务器资源未找到，请检查服务器日志</string>
	<string name="diagosis_error_host">服务器响应异常，请检查地址配置</string>
	<string name="diagosis_error">未知错误</string>
	<string name="diagosis_error_push_host_wrong">服务器地址配置格式有误</string>
	<string name="diagosis_error_wrong_ssl">服务器SSL连接错误，请检查地址配置</string>
	<string name="diagosis_error_mqtt">推送服务器连接失败，请检查服务器日志</string>
	<string name="diagosis_error_mqtt_disconnect">推送服务器连接后异常中断，请检查服务器日志</string>
	
	<string name="gesture_password_on">开启手势密码</string>
	<string name="gesture_password_change">修改手势密码</string>
	<string name="gesture_password_check_error">手势密码错误，请重新输入</string>
	
	<string name="gesture_password_setting_relogin_tip">忘记手势密码，需重新登录</string>
	<string name="gesture_password_setting_relogin">重新登录</string>
	<string name="gesture_password_setting_forget">忘记手势密码</string>
	<string name="gesture_password_setting_login_changeuser">其他帐户登录</string>
	<string name="gesture_password_setting_first">设置手势密码</string>
	<string name="gesture_password_setting_second">请再次输入手势密码</string>
	<string name="gesture_password_setting_secondwrong">与上一次绘制不一致，请重新绘制</string>
	<string name="gesture_password_setting_reset">重新设置手势</string>
	<string name="gesture_password_setting_success">手势密码设置成功</string>
	<string name="gesture_password_setting_error">最少连接三个点</string>
	
	<string name="new_message_notification">接收新消息通知</string>
	<string name="new_message_notification_sound">声音</string>
	<string name="new_message_notification_shake">震动</string>
	<string name="settings_disturb_setting_tip">设置消息提示声音和震动时间</string>
	
	<string name="settings_disturb_on">全天开启</string>
    <string name="settings_disturb_on_night">只在夜间开启</string>
    <string name="settings_disturb_off">关闭</string>
    <string name="settings_disturb_time_tip">"开启免打扰后，消息将收不到声音和震动提醒
        夜间免打扰时间段 22:00 - 08:00"</string>
	
	<!-- 聊天界面菜单名称 -->
	<string name="top_right_start_conversation">发起群聊</string>
    <string name="top_right_add_contact">添加联系人</string>
    <string name="top_right_scan">扫一扫</string>
    <string name="top_right_circle_message">工作分享</string>
    
    <!-- 圈子界面菜单名称 -->
	<string name="circle_menu_send_text">发布消息</string>
    <string name="circle_menu_create_task">创建任务</string>
    <string name="circle_menu_activity">组织活动</string>
    <string name="circle_menu_poll">发起投票</string>
    <string name="error_no_network">此操作需要联网，请检查网络设置</string>
    <string name="share_message_unsupport">尚不支持分享此文件</string>
    
    <string name="notification_downloading_upgrade">开始下载</string>
    <string name="notification_downloading_upgrade_progress">下载进度：</string>
    <string name="notification_downloading_upgrade_complete">下载完成，点击安装</string>
    <string name="notification_mail_setting">接收新邮件通知</string>
    <string name="toast_download_error">下载出现错误</string>
    <string name="toast_sdcard_not_existed">SD卡未插入</string>
    <string name="app_upgrade">V%1$s版本更新</string>
    <string name="notification_downloading_smart_error_message">增量更新失败，是否选择下载原始安装文件</string>
    <string name="app_center_finish_edit">完成</string>
    
    <string name="share_label_send_to_chat">发送给朋友</string>
    <string name="share_label_send_to_circle">发送到工作圈</string>
    
    <string name="app_demo_personcenter">个人中心</string>
    <string name="app_demo_share">分享</string>
    <string name="app_demo_circle">朋友圈</string>
    <string name="app_demo_chat">聊天</string>
    <string name="app_demo_appinfo">应用信息</string>
    <string name="app_demo_appcenter">应用中心</string>
    <string name="interface_share_img_circle">分享照片到朋友圈</string>
    <string name="interface_share_imgs_circle">分享图集到朋友圈</string>
    <string name="interface_share_img_chat">分享照片到聊天</string>
    <string name="interface_share_imgs_chat">分享图集到聊天</string>
    <string name="interface_share_link_chat">分享链接到聊天</string>
    <string name="interface_share_link_circle">分享链接到朋友圈</string>
    <string name="interface_auto_share_link_circle">自动分享链接到朋友圈</string>
    <string name="interface_share_text_chat">分享文本到聊天</string>
    <string name="interface_share_text_circle">分享文本到朋友圈</string>
    <string name="interface_share_mail">分享到邮箱</string>
    <string name="interface_view_current_user">查看当前用户</string>
    <string name="interface_star_current_user_activity">启动当前用户界面</string>
    <string name="interface_view_network_list">启动外部社区界面</string>
    <string name="interface_star_personinfo_activity">启动用户信息界面</string>
    <string name="interface_view_person_info_json">获取用户信息(josn)</string>
    <string name="interface_view_person_info">获取用户信息</string>
    <string name="interface_change_password">开启修改密码界面</string>
    <string name="interface_star_contactsconfig">启动通讯录配置</string>
    <string name="interface_select_user">选择用户</string>
    <string name="interface_select_address_contacts">选择本地通讯录</string>
    <string name="interface_query_network_unread">查看当前社区未读消息数</string>
    <string name="interface_query_oncurrent_network_unread">查看外部社区未读消息数</string>
    <string name="interface_check_network_unread">检查当前社区工作圈是否有未预览消息</string>
    <string name="interface_switch_network">切换社区</string>
    <string name="interface_satr_chat_callback">启动聊天回调</string>
    <string name="interface_force_refresh_circle">强制刷新朋友圈</string>
    <string name="interface_set_auto_refresh_circle">设置自动刷新朋友圈</string>
    <string name="interface_create_graph">创建群聊</string>
    <string name="interface_get_app_center_infos">获取应用中心信息</string>
    <string name="interface_launch_app_info">加载应用信息</string>
    <string name="interface_launch_app_info_ext">加载应用信息(EXT)</string>
    <string name="interface_view_topics">查看话题</string>
    <string name="interface_invoke_request">调用请求</string>
    <string name="share_choose_image_path">请选择图片来源</string>
    <string name="share_choose_image_capture">拍照片</string>
    <string name="share_choose_image_photo">媒体库</string>
    
    <string name="work_circle_pop_my_message">我的消息</string>
    <string name="work_circle_pop_my_favmessage">我的收藏</string>
    <string name="work_circle_my_file">我上传的文件</string>
    <string name="downloaded_file">我下载的文件</string>
    <string name="migrate_db_alert_title">提示</string>
    
    <string name="upgrade_network_disable">离线状态不能执行该操作</string>
    <string name="upgrade_no_new_version">已是最新版本，无需升级</string>
    <string name="upgrade_info_time">更新时间：</string>
    <string name="upgrade_info_size">文件大小：</string>
    <string name="upgrade_download_complete">下载已完成，点击进行安装</string>
    
    <string name="web_title_instrodution">功能介绍</string>
    <string name="app2app_start_chat_error">缺少发起聊天所需的数据</string>
    <string name="app2app_switch_tab_error">缺少切换页签所需的数据</string>
    
    <string name="chat_notification_unit_start">[</string>
    <string name="chat_notification_unit_end">条]</string>
    <string name="gesture_password_check">请输入手势密码</string>
    <string name="settings_font_size_setting_tittle">字体大小</string>
    <string name="open_horizontal_screen">横屏模式</string>
    <string name="open_horizontal_screen_on">开启横屏模式</string>

    <string name="mx_ipadress_change">IP地址修改</string>
</resources>