<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <include
        android:id="@+id/system_title"
        layout="@layout/system_title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/system_title" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/appdemo_force_refresh_circle"
                style="@style/bg_setting_item_narrow"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <com.minxing.kit.ui.widget.MXVariableTextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1.0"
                    android:drawableRight="@drawable/submenu"
                    android:text="@string/interface_force_refresh_circle"
                    android:textColor="@color/black"
                    android:textSize="@dimen/middle_textsize" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/appdemo_set_autorefresh_circle"
                style="@style/bg_setting_item_narrow"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <com.minxing.kit.ui.widget.MXVariableTextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1.0"
                    android:drawableRight="@drawable/submenu"
                    android:text="@string/interface_set_auto_refresh_circle"
                    android:textColor="@color/black"
                    android:textSize="@dimen/middle_textsize" />
            </LinearLayout>
             <LinearLayout
                android:id="@+id/appdemo_check_network_unread"
                style="@style/bg_setting_item_narrow"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <com.minxing.kit.ui.widget.MXVariableTextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1.0"
                    android:drawableRight="@drawable/submenu"
                    android:text="@string/interface_check_network_unread"
                    android:textColor="@color/black"
                    android:textSize="@dimen/middle_textsize" />
            </LinearLayout>
        </LinearLayout>
          
    </ScrollView>

</RelativeLayout>